--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,8 @@ span.km-text{font-size:40px}
 
 .km-header{font-size: 30px;background: green;}
 .km-view-title{color:red !important}
+
+.km-root .km-android .km-view {
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+}
