--- a/style/style.css
+++ b/style/style.css
@@ -11,11 +11,12 @@ span.km-text{font-size:40px}
 }
 
 
-.km-android #home .km-tabstrip a
+
+.km-android .km-tabstrip a
 {
  color: #a8a8a8;
 }
-.km-android #home .km-tabstrip .km-text
+.km-android .km-tabstrip .km-text
 {
 height: 3.7rem;
 padding-top: 1.8rem;
